✨ Feat : implement `Comparable`